StatusWidget: fade-in/out animations (#615)
Adds a fade-in and fade-out to StatusWidget appearance and disappearance.

StatusWidget now has a top-level `CSSTransition` element, via the [ReactTransitionGroup](https://github.com/reactjs/react-transition-group) library. It wraps the StatusWidget's actual display elements, and adds/removes the CSS classes that perform the animations automatically.

(We should consider using ReactTransitionGroup to control other bits of animation in the code; it's elegant and simple.)

I also snuck in an update to the latest version of typescript and the various @types packages we're using.

--- a/frontend/src/StatusWidget.scss
+++ b/frontend/src/StatusWidget.scss
@@ -102,10 +102,41 @@
 }
 
 //
-// ReportStatus minimize animation
+// Top-level StatusWidget appear/disappear animations
 //
 
-$anim-time: 0.2s;
+.StatusWidget-appear {
+  opacity: 0;
+}
+
+.StatusWidget-appear-active {
+  opacity: 1;
+  transition: opacity 200ms ease-out;
+}
+
+.StatusWidget-enter {
+  opacity: 0;
+}
+
+.StatusWidget-enter-active {
+  opacity: 1;
+  transition: opacity 200ms ease-out;
+}
+
+.StatusWidget-exit {
+  opacity: 1;
+}
+
+.StatusWidget-exit-active {
+  opacity: 0;
+  transition: opacity 200ms ease-out;
+}
+
+//
+// Report Changed prompt minimize animation
+//
+
+$anim-time: 200ms;
 $anim-easing: ease-out;
 
 // Unminimized -> Minimized
