--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -3,7 +3,7 @@
  * Copyright 2019 Streamlit Inc. All rights reserved.
  */
 
-@import '../../assets/css/variables';
+@import '../../../assets/css/variables';
 
 
 .streamlit-container .element-container {
