Remove the word "proxy" from everything (except config options)

--- a/frontend/src/components/core/StatusWidget/StatusWidget.scss
+++ b/frontend/src/components/core/StatusWidget/StatusWidget.scss
@@ -7,7 +7,7 @@
 
 /*
   "ConnectionStatus" styles are used for displaying
-  the status of our connection to the proxy (connected,
+  the status of our connection to the server (connected,
   disconnected, error, etc).
 */
 
