Copy to clipboard

--- a/frontend/src/components/elements/Text/Text.scss
+++ b/frontend/src/components/elements/Text/Text.scss
@@ -13,6 +13,7 @@
 .streamlit-container .markdown-text-container {
   font-family: 'IBM Plex Sans', sans-serif;
   margin-bottom: -1rem;
+  position: relative;
 }
 
 .streamlit-container .markdown-text-container p {
