--- a/frontend/src/components/core/StatusWidget/StatusWidget.scss
+++ b/frontend/src/components/core/StatusWidget/StatusWidget.scss
@@ -97,10 +97,6 @@
   margin-right: -0.5rem;
 }
 
-.UnderlineFirstLetter::first-letter {
-  text-decoration: underline;
-}
-
 //
 // Top-level StatusWidget appear/disappear animations
 //
@@ -133,14 +129,15 @@
 }
 
 //
-// Report Changed prompt minimize animation
+// ReportStatus animations
 //
 
 $anim-time: 200ms;
 $anim-easing: ease-out;
 
-// Unminimized -> Minimized
-#ReportStatus.minimized label {
+// "Report is Runnning" minimize animation
+// (Buttons remain visible)
+#ReportStatus.report-is-running-minimized label {
   opacity: 0;
   visibility: hidden;
   padding: 0;
@@ -158,7 +155,32 @@ $anim-easing: ease-out;
     visibility 0s $anim-easing $anim-time;
 }
 
-// Minimized -> Unminimized
+
+// "Source file changed. Rerun?" minimize animation
+// (Buttons are hidden)
+#ReportStatus.rerun-prompt-minimized label,
+#ReportStatus.rerun-prompt-minimized button,
+#ReportStatus.rerun-prompt-minimized button * {
+  opacity: 0;
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+  max-width: 0;
+  min-width: 0;
+  border: 0;
+  transition:
+    opacity $anim-time $anim-easing 0s,
+    clip $anim-time $anim-easing 0s,
+    min-width $anim-time $anim-easing 0s,
+    max-width $anim-time $anim-easing 0s,
+    margin $anim-time $anim-easing 0s,
+    padding $anim-time $anim-easing 0s,
+
+      // Hide at end of the transition
+    visibility 0s $anim-easing $anim-time;
+}
+
+// Minimized -> Unminimized animation
 #ReportStatus label,
 #ReportStatus button,
 #ReportStatus button * {
