--- a/frontend/src/components/elements/VegaLiteChart/VegaLiteChart.scss
+++ b/frontend/src/components/elements/VegaLiteChart/VegaLiteChart.scss
@@ -3,6 +3,13 @@
  * Copyright 2018 Streamlit Inc. All rights reserved.
  */
 
+@import 'src/assets/css/variables';
+
+
 #vg-tooltip-element td {
   border: none;
+}
+
+.vega-actions {
+  z-index: $z-index-popup-menu;
 }
