--- a/frontend/src/components/elements/CodeBlock/CodeBlock.scss
+++ b/frontend/src/components/elements/CodeBlock/CodeBlock.scss
@@ -1,4 +1,7 @@
 /**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ *
  * prism.js default theme for JavaScript, CSS and HTML;
  * stripped of everything except for token styling.
  *
