--- a/frontend/src/components/elements/CodeBlock/CopyButton.scss
+++ b/frontend/src/components/elements/CodeBlock/CopyButton.scss
@@ -1,19 +1,35 @@
-.copy {
+/**
+ * @license
+ * Copyright 2018 Streamlit Inc. All rights reserved.
+ */
+
+@import 'src/assets/css/variables';
+
+
+.copyBtn {
   background: transparent;
-  border: 1px solid transparent;
-  border-radius: 8px;
-  padding: 4px 8px;
+  border: none;
+  padding: 0 $m1-2-font-size-sm;
   position: absolute;
-  right: 10px;
-  top: 10px;
-  transition: 0.15s;
+  right: -2 * $font-size-base;
+  top: 0;
+  transition: opacity 300ms;
+  opacity: 0;
 }
 
-.copy:hover {
-  border-color: #f63366;
-}
+.element-container:hover {
+  .copyBtn {
+    opacity: 0.25;
+  }
 
-.copy:focus {
-  box-shadow: 0 0 0 0.2rem rgba(118, 128, 150, 0.5);
-  outline: none;
+  .copyBtn:hover {
+    opacity: 1.0;
+  }
+
+  .copyBtn:active,
+  .copyBtn:focus {
+    box-shadow: 0 0 0 0.2rem rgba(118, 128, 150, 0.5);
+    outline: none;
+    opacity: 1.0;
+  }
 }
