--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -1,7 +1,7 @@
-/**
- * @license
- * Copyright 2019 Streamlit Inc. All rights reserved.
- */
+// Copyright 2019 Streamlit Inc. All rights reserved.
+
+// (Using a different license header format here because scss-to-json doesn't
+// like multi-line comments)
 
 // Overwrite some basic colors.
 $white:      #FFFFFF;
@@ -42,7 +42,7 @@ $font-family-monospace:  'IBM Plex Mono', monospace;
 
 // This should equal 17px since 1rem == 16px.
 // (Can't set actual pixels here because it breaks bootstrap)
-$font-size-base:    1.0625rem;
+$font-size-base:    1rem;
 
 $font-size-sm:      0.8rem;
 $line-height-base:  1.6;
@@ -56,3 +56,7 @@ $btn-border-radius: $border-radius-large;
 // Custom z-index values (not related to bootstrap)
 $z-index-popup-menu: 102;
 $z-index-header: 100;
+
+// Custom values for our own use.
+$m1-2-font-size-sm: 0.8rem / 2;  // m1-2 = multiply by 1/2
+$m2-3-font-size-sm: 0.8rem * 2 / 3;  // m2-3 = multiply by 2/3
