--- a/frontend/src/components/core/ReportView/Widget.scss
+++ b/frontend/src/components/core/ReportView/Widget.scss
@@ -8,6 +8,17 @@
 
 .Widget > label {
   font-size: $font-size-sm;
-  color: $gray-dark;
+  color: $black;
   margin-bottom: $m1-2-font-size-sm;
+}
+
+.Widget > .instructions {
+  font-size: $font-size-sm;
+  color: $gray;
+  margin: 0;
+  text-align: right;
+  position: absolute;
+  margin: 0;
+  bottom: 0;
+  right: $m1-2-font-size-sm;
 }
