--- a/frontend/src/components/core/StatusWidget/StatusWidget.scss
+++ b/frontend/src/components/core/StatusWidget/StatusWidget.scss
@@ -53,10 +53,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5rem;
-  margin: 0 1rem 0 0;
-  padding-left: 3rem; // extra padding for a bigger hover target
-  background-color: white; // opaque background
+  border-radius: $border-radius-sm;
+  margin: 0 0.5rem 0 0;
+  padding-left: 0.5rem;
+  background-color: #fffd;
+  height: $font-size-base * $line-height-base;
 }
 
 #ReportStatus label {
@@ -71,7 +72,6 @@
 #ReportStatus label.prompt {
   font-size: 0.8rem;
   color: $gray-dark;
-  background-color: white;
   border-radius: $border-radius-sm;
   text-transform: none;
   margin-right: 0;
@@ -87,7 +87,7 @@
   fill: $gray-700;
   width: 1rem;
   height: 1rem;
-  margin-right: -0.5rem;
+  margin-right: 0.5rem;
 }
 
 .ReportRunningIcon {
