--- a/frontend/src/assets/css/variables.scss
+++ b/frontend/src/assets/css/variables.scss
@@ -76,3 +76,8 @@ $z-index-sidebar: 99;
 $m1-2-font-size-sm: $font-size-sm / 2;  // m1-2 = multiply by 1/2
 $m2-3-font-size-sm: $font-size-sm * 2 / 3;  // m2-3 = multiply by 2/3
 $m1-2-font-size-base: $font-size-base / 2;  // m1-2 = multiply by 1/2
+
+// Layout sizing
+$sidebar-width: 250px;
+$content-min-width: $sidebar-width * 2;
+$content-max-width: 730px;
