--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -16,15 +16,48 @@
 
 @import 'src/assets/css/variables';
 
+.reportview-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: stretch;
+  width: 100%;
 
-.streamlit-container {
+  &.--wide {
+    .main {
+      .block-container {
+        min-width: auto;
+        max-width: initial;
+      }
+    }
+  }
+
+  .main {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    margin-left: 275px;
+    align-items: center;
+
+    .block-container {
+      min-width: $content-min-width;
+      max-width: $content-max-width;
+      width: 100%;
+    }
+
+    @media (max-width: 756px) {
+      margin-left: 0;
+    }
+  }
+
   .sidebar {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 250px;
-    padding-top: 5rem;
+    width: $sidebar-width;
+    padding: 5rem 15px 15px 15px;
     overflow-x: hidden;
     overflow-y: auto;
     z-index: $z-index-sidebar;
@@ -52,19 +85,20 @@
     h6 {
       font-size: 0.8rem;
     }
-  }
 
-  @media (max-width: 1150px) {
-    .sidebar {
-      background: $white;
-      transform: translateX(-240px);
-      transition: transform 300ms 500ms, box-shadow 300ms 500ms;
-    }
+    @media (max-width: 756px) {
+      & {
+        background: $white;
+        transform: translateX(-240px);
+        z-index: 0;
+      }
 
-    .sidebar:hover {
-      transform: translateX(0);
-      box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
-      transition: transform 300ms, box-shadow 300ms;
+      &:hover {
+        transform: translateX(0);
+        box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+        transition: transform 150ms, box-shadow 150ms;
+        z-index: $z-index-sidebar;
+      }
     }
   }
 
