--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -45,6 +45,7 @@ iframe {
   margin: 80px auto;
   width: unset;
   max-width: unset;
+  padding: 0;
 }
 
 .streamlit-embedded .streamlit-container {
